Fixed white space issue caused by footer width, remove changes from merging

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -316,25 +316,8 @@ nav {
 footer {
   background-color: rgb(61,3,105);
   padding: 100px 0;
-<<<<<<< HEAD
   position: relative;
   width: 100%
-||||||| c7407a3
-=======
-  position: relative;
-  width: 100%;
-}
-
-/* from https://stackoverflow.com/questions/34228591/how-to-position-copyright-footer-into-the-center-bottom-of-the-footer */
-p.copyright {
-  position: absolute;
-  width: 100%;
-  /* line-height: 40px;
-  font-size: 0.7em; */
-  text-align: center;
-  bottom:0;
-
->>>>>>> b7feb980f393d090d1cd46f659285f9179056d32
 }
 
 p.copyright {
